--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
+    "firebase": "^9.6.11",
+    "react": "^17.0.2",
+    "react-clock": "^3.1.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "4.0.3",
     "reactstrap": "^9.0.1",
     "shortid": "^2.2.16",
     "uuid": "^8.3.2",
